Added expensify styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,14 @@
 //Colors
+$dark-gray: #333333;
+$grey: #666666;
+$blue:  rgb(27, 24, 216);
+$dark-blue:#364051;
+$off-white: #f7f7f7;
 
 
-
-
+//FONT-SIZES
+$font-size-lg:1.8rem;
+$font-size-small:1.4rem;
 
 //Spacing
 $s-size: 1.2rem;
