--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,12 +1,15 @@
-    
+ * {
+     box-sizing: border-box;
+ }   
 html {
     font-size: 62.5%;
 }
 
 body {
+    color:$dark-gray;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: $m-size;
-    
+    font-size: $m-size; 
+    line-height: 1.6;
 }
 
 button {
@@ -18,5 +21,5 @@ button:disabled {
 }
 
 .is-active {
-    font-weight: bold;
+    font-weight: bold; 
 }
